--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,26 +8,40 @@
     <title>Test Your JavaScript Skills!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="reset.css">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Quicksand&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500&family=Quicksand&display=swap"
+        rel="stylesheet">
 
-    <link rel ="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
+    <header>
+        <!-- class where the timer is going to be displayed-->
+        <h3 id="timer" class="timer"></h3>
+    </header>
 
-    <div>
-        <h3 id ="timer" class="timer"></h3>
-
-    <h1> Test Your JavaScript Skills! </h1>
-    <p> During your job interviews, you will likely be asked to test your skills in JavaScript in order to qualify you for the job,<br> 
-        click the start button to start the timed test, you will have one minute to answer 10 questions, for every question you get<br>
-        wrong, the timer will deduct 10 seconds, at the end of the test, you will recieve a final score. </p>
-    <button id = "start" class = "Btn">Start Quiz</button>  
+    <!-- div where the start page is stored so that it could be hidden once the game starts-->
+    <div class="startpage">
+        <h1> Test Your JavaScript Skills! </h1>
+        <p> During your job interviews, you will likely be asked to test your skills in JavaScript in order to qualify
+            you for the job,<br>
+            click the start button to start the timed test, you will have one minute to answer 10 questions, for every
+            question you get<br>
+            wrong, the timer will deduct 10 seconds, at the end of the test, you will recieve a final score. </p>
+        <button id="start" class="Btn">Start Quiz</button>
     </div>
 
-    <div> 
-        <h2 class = "Question"> </h2>
+    <div class="Quiz">
+        <h2 class="Question"> </h2>
         <div class="answer"> </div>
-    <script src="script.js" ></script>
+    </div>
+
+    <div class="GameEnd"> 
+        <h2 class ="EndScript" ></h2>
+        <div class="Name"></div>
+    </div>
+    <script src="script.js"></script>
 </body>
+
 </html>
