added a function to set user input to local storage

--- a/index.html
+++ b/index.html
@@ -39,7 +39,8 @@
 
     <div class="GameEnd"> 
         <h2 class ="EndScript" ></h2>
-        <div class="Name"></div>
+        <div class="Name" id="Name" ></div>
+        <div class="Submit" id="Submit"></div> 
     </div>
     <script src="script.js"></script>
 </body>
