added a submit button, debugged some code that was preventing my questions to populate, updated my README

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <h2 class ="EndScript" ></h2>
         <div class="Name" id="Name" ></div>
         <div class="Submit" id="Submit"></div> 
+        <div class="Startover"> </div>
     </div>
     <script src="script.js"></script>
 </body>
